<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MembershipActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid" />

        <EditText
            android:id="@+id/id_Text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:hint="@string/login_write_id"
            android:privateImeOptions="defaultInputmode=english"
            android:inputType="textEmailAddress"
            android:singleLine = "true"
            android:lines = "1"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/overlapcheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpw" />

        <EditText
            android:id="@+id/pw_Text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:hint="@string/login_write_pw"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repw" />

        <EditText
            android:id="@+id/re_pw_Text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_write_pw"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_Text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:hint="@string/write_name"
            android:singleLine = "true"
            android:lines = "1"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/overlapcheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qanda" />

    <Spinner
        android:id="@+id/_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/question_list"></Spinner>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_answer"
        android:privateImeOptions="defaultInputmode=korea"
        android:singleLine = "true"
        android:lines = "1"/>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBack"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish" />
    </LinearLayout>

</LinearLayout>